# twitter-bot-openai-images

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: generate_images.py  image_generator.py  prompt_generator.py  twitter_bot.py
